--- a/css/main.css
+++ b/css/main.css
@@ -592,4 +592,112 @@ img {
 .searching__bar-main {
   gap: 50px;
 }
+
+.search {
+  display: none;
+  position: fixed;
+  top: 60px;
+  width: 100%;
+  height: 100vh;
+  -webkit-transition: all 5s linear;
+  transition: all 5s linear;
+  z-index: 1051;
+}
+
+.search__main {
+  width: 525px;
+  max-height: 100vh;
+  background-color: #fff;
+  border-radius: 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin: 0 auto;
+  -webkit-transform: translateX(50px);
+          transform: translateX(50px);
+}
+
+.search__box {
+  border-radius: 6px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+.search__title {
+  font-size: 30px;
+  font-weight: 700;
+  padding-left: 20px;
+}
+
+.search__list {
+  max-height: 85vh;
+  list-style-type: none;
+  padding: 15px;
+  overflow: auto;
+}
+
+.search__item {
+  border-radius: 6px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, #d1d5db 0px 0px 0px 1px inset;
+          box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, #d1d5db 0px 0px 0px 1px inset;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+
+.search__imgbox {
+  width: 80px;
+  height: 100px;
+  border-radius: 4px;
+  overflow: hidden;
+  margin-right: 15px;
+}
+
+.search__img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.search__name {
+  width: 80%;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+form {
+  margin: 0 auto;
+  background-color: #d4cfcf;
+  padding: 25px 50px;
+}
+
+form .search-bar2 {
+  margin-right: 20px;
+}
+
+form .search-bar2 .bx-search {
+  color: #fff;
+  padding: 10px 15px;
+  background-color: #02AADD;
+}
+
+form input {
+  padding: 10px 15px;
+  border: none;
+  outline: none;
+}
+
+form .all-btn {
+  padding: 10px 100px;
+  margin-right: 20px;
+}
+
+form .submit {
+  margin-left: 20px;
+  background-color: #131A20;
+  color: #fff;
+  border-radius: 20px;
+  padding: 0 50px;
+}
 /*# sourceMappingURL=main.css.map */
