--- a/scss/blocks/_movie.scss
+++ b/scss/blocks/_movie.scss
@@ -408,3 +408,95 @@
 .searching__bar-main {
     gap: 50px;
 }
+
+// Search part //
+.search {
+    display: none;
+    position: fixed;
+    top: 60px;
+    width: 100%;
+    height: 100vh;
+    transition: all 5s linear;
+    z-index: 1051;
+    &__main {
+        width: 525px;
+        max-height: 100vh;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        margin: 0 auto;
+        transform: translateX(50px);
+    }
+    &__box {
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+        padding: 10px;
+        margin-bottom: 15px;
+    }
+    &__title {
+        font-size: 30px;
+        font-weight: 700;
+        padding-left: 20px;
+    }
+    &__list {
+        // height: 25px;
+        max-height: 85vh;
+        list-style-type: none;
+        padding: 15px;
+        overflow: auto;
+    }
+    &__item {
+        border-radius: 6px;
+        box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+        padding: 15px;
+        margin-bottom: 15px;
+    }
+    &__imgbox {
+        width: 80px;
+        height: 100px;
+        border-radius: 4px;
+        overflow: hidden;
+        margin-right: 15px;
+    }
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    &__name {
+        width: 80%;
+        font-size: 20px;
+        font-weight: 500;
+    }
+}
+
+form {
+    margin: 0 auto;
+    background-color: rgb(212, 207, 207);
+    padding: 25px 50px;
+    .search-bar2 {
+        margin-right: 20px;
+        .bx-search {
+            color: #fff;
+            padding: 10px 15px;
+            background-color: #02AADD;
+        }
+    }
+    input {
+        padding: 10px 15px;
+        border: none;
+        outline: none;
+        // margin-right: 20px;
+    }
+    .all-btn {
+        padding: 10px 100px;
+        margin-right: 20px;
+    }
+    .submit {
+        margin-left: 20px;
+        background-color: #131A20;
+        color: #fff;
+        border-radius: 20px;
+        padding: 0 50px;
+    }
+}
