--- a/css/main.css
+++ b/css/main.css
@@ -715,6 +715,8 @@ form .submit {
   border: 1px solid rgba(255, 255, 255, 0.308);
   background-color: #222933;
   width: 250px;
+  height: 400px;
   color: #fff;
+  margin: 20px 0;
 }
 /*# sourceMappingURL=main.css.map */
