--- a/scss/blocks/_movie.scss
+++ b/scss/blocks/_movie.scss
@@ -491,6 +491,8 @@ form {
         border: 1px solid rgba(255, 255, 255, 0.308);
         background-color: #222933;
         width: 250px;
+        height: 400px;
         color: #fff;
+        margin: 20px 0;
     }
 }
